--- a/Turesso/style.css
+++ b/Turesso/style.css
@@ -1,21 +1,44 @@
-
-
-.cabecalho {
-    padding:0;
-    margin:0;
+* {
+    margin: 0;
+    padding: 0;
 }
 
 .cabecalho {
-    background-color:#424e61;
-    color:white;
-    display:flex;
-    justify-content:space-around;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
 }
 
 .cabecalho-imagem{
-     width: 20%;
+    width: 15%;
 }
 
-.cabecalho-lista item{
-
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 20px;
 }
+
+.escola-imagem{
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(black,darkred);
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.escola-div-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 24px 0;
+}
+
