--- a/Turesso/style.css
+++ b/Turesso/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body{
+    font-family: 'Bebas Neue', cursive;
+}
+
 .cabecalho {
     background-color: black;
     color: white;
@@ -13,21 +17,21 @@
 }
 
 .cabecalho-imagem{
-    width: 15%;
+    width: 12%;
 }
 
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .escola-imagem{
-    width: 25%;
+    width: 20%;
 }
 
 .escola{
-    background-image: linear-gradient(black,darkred);
+    background-image: linear-gradient(black,rgb(4, 117, 112));
     color:white;
     display: flex;
     justify-content: center;
@@ -36,9 +40,12 @@
 }
 
 .escola-div-conteudo{
-    width: 35%;
+    width: 75%;
+    font-size: 25px;
 }
 .escola-titulo{
     padding: 24px 0;
 }
+
+
 
