--- a/Turesso/style.css
+++ b/Turesso/style.css
@@ -1,14 +1,12 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
-
-body{
-    font-family: 'Bebas Neue', cursive;
+body {
+    font-family: 'Bebas Neue', sans-serif;
 }
-
 .cabecalho {
-    background-color: black;
+    background-color: #424E61;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -17,21 +15,21 @@ body{
 }
 
 .cabecalho-imagem{
-    width: 12%;
+    width: 13%;
 }
 
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-    font-size: 30px;
+    font-size: 27px;
 }
 
 .escola-imagem{
-    width: 20%;
+    width: 25%;
 }
 
 .escola{
-    background-image: linear-gradient(black,rgb(4, 117, 112));
+    background-image: linear-gradient(#424E61,#16CFF8);
     color:white;
     display: flex;
     justify-content: center;
@@ -40,12 +38,28 @@ body{
 }
 
 .escola-div-conteudo{
-    width: 75%;
+    width: 45%;
     font-size: 25px;
 }
+
+
 .escola-titulo{
     padding: 24px 0;
 }
 
+.estudante{
+    padding: 24px 0;
+}
+.estudante-imagem{
+    width: 120px;
+}
 
+.estudante-icone{
+    width: 24px;
+    padding: 4px 8px;
+}
 
+.estudante-div{
+    text-align: center;
+    padding: 16px 0;
+}
