--- a/Turesso/style.css
+++ b/Turesso/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 .escola-div-conteudo{
-    width: 45%;
+    width: 35%;
     font-size: 25px;
 }
 
@@ -48,7 +48,7 @@ body {
 }
 
 .estudante{
-    padding: 24px 0;
+    padding: 100px 902px;
 }
 .estudante-imagem{
     width: 120px;
